applications/api-ingress/mailman-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailman-service
spec:
  type: ExternalName
  externalName: mailman-core-0.mail-suit-service.mail.svc.cluster.local
