applications/api-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: api-ingress
spec:
  tls:
    - hosts:
        - api.mindspore.cn
      secretName: api-tls
  rules:
    - host: api.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: mailman-service
              servicePort: 8001
            path: /mailman(/|$)(.*)
          - backend:
              serviceName: nginx-purge-service
              servicePort: 80
            path: /nginx-purger(/|$)(.*)
